# AnalysisTop_rel21

./: setup.sh
TopMass_13TeV_FrMu/: CMakeLists.txt
TopMass_13TeV_FrMu/PythonPlottingCode_TopMass/: DoRunPlottingCode.py  DoRunPlottingCode_MC15.py  DoRunPlottingCode_v38.py  DoRunPlottingCode_v38_dil.py  DoRunSystematicJobs.py  MakeControlPlot.py  MakeControlPlot_NominalOnly.py  MakeControlPlot_NominalOnly_MC15.py  MassSuperScriptPlots.py  PlottingMaster.py  README.md  ReadYield.py  ReadYield2.py  ReadYield_FromHist_Dil.py  RunJobCluster.py  SubmitFillCluster.py  checkMetaSG.py  evaluateSystematicUncertainties.py  setup.sh
TopMass_13TeV_FrMu/TopMass_13TeV_Online/: README.md
TopMass_13TeV_FrMu/TopMass_13TeV_PseudoExp/: CMakeLists.txt
TopMass_13TeV_FrMu/TopMass_13TeV_PseudoExp/Root/: AtlasStyle.cxx  EvaluatePseudoExperiments.cxx  LinkDef.h  PseudoExperimentsFit.cxx  PseudoExperimentsMaster.cxx
TopMass_13TeV_FrMu/TopMass_13TeV_PseudoExp/TopMass_13TeV_PseudoExp/: EvaluatePseudoExperiments.h  PETreeReader.h  PseudoExperimentsFit.h  PseudoExperimentsMaster.h
TopMass_13TeV_FrMu/TopMass_13TeV_PseudoExp/cmt/: Makefile.RootCore
TopMass_13TeV_FrMu/TopMass_13TeV_PseudoExp/share/: doPseudoExperiments.py  doPseudoExperiments_ljets.py
TopMass_13TeV_FrMu/TopMass_13TeV_PseudoExp/util/: MakeClosureTests.cxx  RunPseudoExp.cxx
grid/: .asetup.save  01SubmitToGrid.py  02DownloadFromGrid.py  11CrossSection.py  CMakeLists.txt  Data_rel21.py  DownloadFromGrid.py  MC16_TOPQ1.py  TopMassConfig_MC16a_SYSDIL_TAG70.txt  UpfoldingData.txt  UpfoldingRecoLevel.txt  launch.sh  run.sh  setup.sh  setup_athena.sh
run/: UpfoldingPartLevel.txt  UpfoldingRecoLevel.txt  input-mc-rel21.txt  input-mc-wwbb.txt
(+115 files in other folders)
